# tinyllama.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  DISTRIBUTED_README.md  Doxyfile  README.md  api.cpp  api.h  bindings.cpp  bottlenecks.md  compare_quant_fp16.cpp  compare_tensors.py  convert_hf_to_gguf.py  cpu_attention.cpp  cpu_attention.h  cpu_batch_processor.cpp  cpu_batch_processor.h  cuda_kernels.cu  cuda_kernels.h  cuda_safe_headers.h  dequantize_roundtrip.cpp  distributed_coordinator.cpp  distributed_coordinator.h  distributed_main.cpp  ggml_types.h  gguf_parser.cpp  gguf_parser.h  gguf_structs.h  gpu_initialization.cpp  gpu_initialization.h  gpu_memory_optimization.cpp  kv_cache.cpp  kv_cache.h  logger.cpp  logger.h  main.cpp  main.cpp.back  main_api_example.cpp  main_gguf.cpp  manage.ps1  (+32 more)
.github/workflows/: build-wheels.yml  docs.yml  release.yml
examples/: mpi_cluster_config.yaml  test_batch_bindings.py  test_gpu_limits.py  test_pybindings.py
pytorch/: requirements.txt  run_inference.py  tinyllama.py  utils.py
tinyllama_cpp/: __init__.py
www/: index.html  script.js  style.css
